force-app/main/default/objects/Claim/Claim.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>