force-app/main/default/objects/Claim/fields/AcknowledgedDate__c.field-meta.xml
<CustomField>
    <fullName>AcknowledgedDate__c</fullName>
    <label>Acknowledged Date</label>
    <type>Date</type>
</CustomField>