force-app/main/default/objects/Claim/fields/AllocationCompleted_is__c.field-meta.xml
<CustomField>
    <fullName>AllocationCompleted_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allocation Completed</label>
    <type>Checkbox</type>
</CustomField>