force-app/main/default/objects/Claim/fields/BizRegion_fm__c.field-meta.xml
<CustomField>
    <fullName>BizRegion_fm__c</fullName>
    <formula>Text(Placement_lk__r.BizRegion__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Biz Region</label>
    <type>Text</type>
</CustomField>