force-app/main/default/objects/Claim/fields/CedantClaimNo__c.field-meta.xml
<CustomField>
    <fullName>CedantClaimNo__c</fullName>
    <label>Cedant Claim No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>