force-app/main/default/objects/Claim/fields/CedantCountry__c.field-meta.xml
<CustomField>
    <fullName>CedantCountry__c</fullName>
    <label>Cedant Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Country</valueSetName>
    </valueSet>
</CustomField>