force-app/main/default/objects/Claim/fields/CedantCountry_fm__c.field-meta.xml
<CustomField>
    <fullName>CedantCountry_fm__c</fullName>
    <formula>Text( Placement_lk__r.CedantName_lk__r.Country__c)</formula>
    <label>Cedant Country</label>
    <type>Text</type>
</CustomField>