force-app/main/default/objects/Claim/fields/CedantDocType__c.field-meta.xml
<CustomField>
    <fullName>CedantDocType__c</fullName>
    <label>Cedant SOC/PLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cedant PLA</fullName>
            </value>
            <value>
                <fullName>Cedant SOC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>