force-app/main/default/objects/Claim/fields/CedantName_fm__c.field-meta.xml
<CustomField>
    <fullName>CedantName_fm__c</fullName>
    <formula>Placement_lk__r.CedantName_lk__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cedant Name</label>
    <type>Text</type>
</CustomField>