force-app/main/default/objects/Claim/fields/CedantName_lk__c.field-meta.xml
<CustomField>
    <fullName>CedantName_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cedant Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>