force-app/main/default/objects/Claim/fields/CedantPolicyNo__c.field-meta.xml
<CustomField>
    <fullName>CedantPolicyNo__c</fullName>
    <inlineHelpText>Must match the Placement’s “Cedant Ref No”.</inlineHelpText>
    <label>Cedant Policy No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>