force-app/main/default/objects/Claim/fields/ChildSeq__c.field-meta.xml
<CustomField>
    <fullName>ChildSeq__c</fullName>
    <label>Child Seq</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>