force-app/main/default/objects/Claim/fields/ClaimDocType__c.field-meta.xml
<CustomField>
    <fullName>ClaimDocType__c</fullName>
    <label>SOC/PLA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CLM_DocType</valueSetName>
    </valueSet>
</CustomField>