force-app/main/default/objects/Claim/fields/ClaimOrder__c.field-meta.xml
<CustomField>
    <fullName>ClaimOrder__c</fullName>
    <label>Claim Order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>