force-app/main/default/objects/Claim/fields/ClaimOwner_fm__c.field-meta.xml
<CustomField>
    <fullName>ClaimOwner_fm__c</fullName>
    <formula>IF(ISBLANK(Owner:User.FirstName), &apos;&apos;, Owner:User.FirstName&amp;&apos; &apos;) &amp; Owner:User.LastName</formula>
    <label>Claim Owner(fm)</label>
    <type>Text</type>
</CustomField>