force-app/main/default/objects/Claim/fields/ClaimPeriod__c.field-meta.xml
<CustomField>
    <fullName>ClaimPeriod__c</fullName>
    <label>Claim Period (for BDX)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>