force-app/main/default/objects/Claim/fields/ClaimStatus__c.field-meta.xml
<CustomField>
    <fullName>ClaimStatus__c</fullName>
    <label>Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Re-open</fullName>
                <isActive>false</isActive>
                <label>Re-open</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>