force-app/main/default/objects/Claim/fields/ExpAmt__c.field-meta.xml
<CustomField>
    <fullName>ExpAmt__c</fullName>
    <label>Expense Amount (100%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>