force-app/main/default/objects/Claim/fields/ExpAmtLK_fm__c.field-meta.xml
<CustomField>
    <fullName>ExpAmtLK_fm__c</fullName>
    <formula>ExpAmt__c  *  LKShare__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expense Amount (for LK Share)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>