force-app/main/default/objects/Claim/fields/ExpDesc__c.field-meta.xml
<CustomField>
    <fullName>ExpDesc__c</fullName>
    <label>Expense Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>