force-app/main/default/objects/Claim/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <inlineHelpText>Must match the Placement’s “Expiration Date”.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>