force-app/main/default/objects/Claim/fields/ExpRsvLK_fm__c.field-meta.xml
<CustomField>
    <fullName>ExpRsvLK_fm__c</fullName>
    <formula>ExpRsvRem__c * LKShare__c</formula>
    <label>Expense Amount Reserve (for LK Share)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>