force-app/main/default/objects/Claim/fields/ExpRsvRem__c.field-meta.xml
<CustomField>
    <fullName>ExpRsvRem__c</fullName>
    <label>Remaining Expense Reserve (100%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>