force-app/main/default/objects/Claim/fields/FinalSummary__c.field-meta.xml
<CustomField>
    <fullName>FinalSummary__c</fullName>
    <label>Final Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>