force-app/main/default/objects/Claim/fields/FirstClaim_fm__c.field-meta.xml
<CustomField>
    <fullName>FirstClaim_fm__c</fullName>
    <formula>RIGHT(Name, 2) = &quot;01&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Claim</label>
    <type>Checkbox</type>
</CustomField>