force-app/main/default/objects/Claim/fields/FXRateDate__c.field-meta.xml
<CustomField>
    <fullName>FXRateDate__c</fullName>
    <label>Date for FX Rate</label>
    <type>Date</type>
</CustomField>