force-app/main/default/objects/Claim/fields/FXRateToSettleCurrency__c.field-meta.xml
<CustomField>
    <fullName>FXRateToSettleCurrency__c</fullName>
    <label>FX Rate to Settlement Currency</label>
    <precision>15</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>