force-app/main/default/objects/Claim/fields/InceptionDate__c.field-meta.xml
<CustomField>
    <fullName>InceptionDate__c</fullName>
    <inlineHelpText>Must match the Placement’s “Inception Date”.</inlineHelpText>
    <label>Inception Date</label>
    <type>Date</type>
</CustomField>