force-app/main/default/objects/Claim/fields/InsurancePolicy_lk__c.field-meta.xml
<CustomField>
    <fullName>InsurancePolicy_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Insurance Policy</label>
    <referenceTo>InsurancePolicy</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>