force-app/main/default/objects/Claim/fields/InsuredEn__c.field-meta.xml
<CustomField>
    <fullName>InsuredEn__c</fullName>
    <label>Insured_Eng</label>
    <length>255</length>
    <type>Text</type>
</CustomField>