force-app/main/default/objects/Claim/fields/InsuredOrigin__c.field-meta.xml
<CustomField>
    <fullName>InsuredOrigin__c</fullName>
    <label>Insured_origin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>