force-app/main/default/objects/Claim/fields/IsMapped_fm__c.field-meta.xml
<CustomField>
    <fullName>IsMapped_fm__c</fullName>
    <formula>NOT(ISBLANK(Placement_lk__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsMapped</label>
    <type>Checkbox</type>
</CustomField>