force-app/main/default/objects/Claim/fields/IssueDate__c.field-meta.xml
<CustomField>
    <fullName>IssueDate__c</fullName>
    <label>SOC/PLA Issue Date</label>
    <type>Date</type>
</CustomField>