force-app/main/default/objects/Claim/fields/IssueDate_fm__c.field-meta.xml
<CustomField>
    <fullName>IssueDate_fm__c</fullName>
    <formula>NOT(ISBLANK(IssueDate__c ))</formula>
    <label>SOC/PLA Issue Exists</label>
    <type>Checkbox</type>
</CustomField>