force-app/main/default/objects/Claim/fields/LastPLA_is__c.field-meta.xml
<CustomField>
    <fullName>LastPLA_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last PLA</label>
    <type>Checkbox</type>
</CustomField>