force-app/main/default/objects/Claim/fields/LKRefNo_fm__c.field-meta.xml
<CustomField>
    <fullName>LKRefNo_fm__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+Placement_lk__c,  Placement_lk__r.LKRefNoh__c  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>LK Ref. No.</label>
    <type>Text</type>
</CustomField>