force-app/main/default/objects/Claim/fields/LKShare__c.field-meta.xml
<CustomField>
    <fullName>LKShare__c</fullName>
    <inlineHelpText>Must match the Placement’s “Total Order”.</inlineHelpText>
    <label>LK Share(%)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>