force-app/main/default/objects/Claim/fields/LocationCount_rs__c.field-meta.xml
<CustomField>
    <fullName>LocationCount_rs__c</fullName>
    <label>Location Count</label>
    <summaryForeignKey>CLM_LocationOfLossJunction__c.Claim_md__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>