force-app/main/default/objects/Claim/fields/LossAmt__c.field-meta.xml
<CustomField>
    <fullName>LossAmt__c</fullName>
    <label>Loss Amount (100%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>