force-app/main/default/objects/Claim/fields/LossAmtLK_fm__c.field-meta.xml
<CustomField>
    <fullName>LossAmtLK_fm__c</fullName>
    <formula>LossAmt__c * LKShare__c</formula>
    <label>Loss Amount (for LK Share)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>