force-app/main/default/objects/Claim/fields/LossDate__c.field-meta.xml
<CustomField>
    <fullName>LossDate__c</fullName>
    <label>Date of Loss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>