force-app/main/default/objects/Claim/fields/LossDesc__c.field-meta.xml
<CustomField>
    <fullName>LossDesc__c</fullName>
    <label>Loss Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>