force-app/main/default/objects/Claim/fields/LossLocation__c.field-meta.xml
<CustomField>
    <fullName>LossLocation__c</fullName>
    <label>Location of Loss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>