force-app/main/default/objects/Claim/fields/LossLocationEn__c.field-meta.xml
<CustomField>
    <fullName>LossLocationEn__c</fullName>
    <label>Location of Loss_Eng.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>