force-app/main/default/objects/Claim/fields/LossParticular__c.field-meta.xml
<CustomField>
    <fullName>LossParticular__c</fullName>
    <label>Particular of Loss</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>