force-app/main/default/objects/Claim/fields/LossParticularEn__c.field-meta.xml
<CustomField>
    <fullName>LossParticularEn__c</fullName>
    <label>Particular of Loss_Eng.</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>