force-app/main/default/objects/Claim/fields/LossRsvLK_fm__c.field-meta.xml
<CustomField>
    <fullName>LossRsvLK_fm__c</fullName>
    <formula>LossRsvRem__c * LKShare__c</formula>
    <label>Loss Amount Reserve (for LK Share)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>