force-app/main/default/objects/Claim/fields/LossRsvRem__c.field-meta.xml
<CustomField>
    <fullName>LossRsvRem__c</fullName>
    <label>Remaining Loss Reserve (100%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>