force-app/main/default/objects/Claim/fields/ParentChild__c.field-meta.xml
<CustomField>
    <fullName>ParentChild__c</fullName>
    <label>Parent/Child</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent</fullName>
                <default>true</default>
                <label>Parent</label>
            </value>
            <value>
                <fullName>Child</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>