force-app/main/default/objects/Claim/fields/ParentClaim_lk__c.field-meta.xml
<CustomField>
    <fullName>ParentClaim_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Claim</label>
    <referenceTo>Claim</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>