force-app/main/default/objects/Claim/fields/ParentClaimStatus__c.field-meta.xml
<CustomField>
    <fullName>ParentClaimStatus__c</fullName>
    <label>Parent Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Re-open</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>