force-app/main/default/objects/Claim/fields/ParentSeq__c.field-meta.xml
<CustomField>
    <fullName>ParentSeq__c</fullName>
    <label>Parent Seq</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>