force-app/main/default/objects/Claim/fields/Placement_lk__c.field-meta.xml
<CustomField>
    <fullName>Placement_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LK Ref. Name</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>