force-app/main/default/objects/Claim/fields/PlacementValid_is__c.field-meta.xml
<CustomField>
    <fullName>PlacementValid_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Placement Valid</label>
    <type>Checkbox</type>
</CustomField>