force-app/main/default/objects/Claim/fields/PlacementValidFields_fm__c.field-meta.xml
<CustomField>
    <fullName>PlacementValidFields_fm__c</fullName>
    <description>Claim과 Placement 간 불일치한 필드를 표시하는 수식 필드.</description>
    <formula>MID(
    IF(
        CedantPolicyNo__c &lt;&gt; Placement_lk__r.PolicyNo__c,
        &quot;, Cedant Policy No.&quot;,
        &quot;&quot;
    ) &amp;
    IF(
        OR(
            AND(ISBLANK(InceptionDate__c), NOT(ISBLANK(Placement_lk__r.InceptionDate__c))),
            AND(NOT(ISBLANK(InceptionDate__c)), ISBLANK(Placement_lk__r.InceptionDate__c)),
            InceptionDate__c &lt;&gt; Placement_lk__r.InceptionDate__c
        ),
        &quot;, Inception Date&quot;,
        &quot;&quot;
    ) &amp;
    IF(
        OR(
            AND(ISBLANK(ExpirationDate__c), NOT(ISBLANK(Placement_lk__r.ExpirationDate__c))),
            AND(NOT(ISBLANK(ExpirationDate__c)), ISBLANK(Placement_lk__r.ExpirationDate__c)),
            ExpirationDate__c &lt;&gt; Placement_lk__r.ExpirationDate__c
        ),
        &quot;, Expiration Date&quot;,
        &quot;&quot;
    ) &amp;
    IF(
        OR(
            AND(
                ISBLANK(LKShare__c),
                NOT(ISBLANK(Placement_lk__r.TotalOrderPct__c))
            ),
            AND(
                NOT(ISBLANK(LKShare__c)),
                ISBLANK(Placement_lk__r.TotalOrderPct__c)
            ),
            AND(
                NOT(ISBLANK(LKShare__c)),
                NOT(ISBLANK(Placement_lk__r.TotalOrderPct__c)),
                ROUND(LKShare__c, 6) &lt;&gt; ROUND(Placement_lk__r.TotalOrderPct__c / 100, 6)
            )
        ),
        &quot;, LK Share(%)&quot;,
        &quot;&quot;
    ),
    3,
    9999
)</formula>
    <label>Placement Valid Fields</label>
    <type>Text</type>
</CustomField>