force-app/main/default/objects/Claim/fields/PLAExpAmt__c.field-meta.xml
<CustomField>
    <fullName>PLAExpAmt__c</fullName>
    <description>Parent Claim에 연결된 Closed 된 Last PLA의 Expense Amount</description>
    <label>PLA Expense Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>