force-app/main/default/objects/Claim/fields/PLALossAmt__c.field-meta.xml
<CustomField>
    <fullName>PLALossAmt__c</fullName>
    <description>Parent Claim에 연결된 Closed 된 Last PLA의 Loss Amount</description>
    <label>PLA Loss Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>