force-app/main/default/objects/Claim/fields/PLATotalAmt_fm__c.field-meta.xml
<CustomField>
    <fullName>PLATotalAmt_fm__c</fullName>
    <description>Parent Claim에 연결된 Closed 된 Last PLA의 Total Amount</description>
    <formula>PLALossAmt__c +  PLAExpAmt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PLA Amount (Latest)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>