force-app/main/default/objects/Claim/fields/Remarks__c.field-meta.xml
<CustomField>
    <fullName>Remarks__c</fullName>
    <label>Remarks</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>