force-app/main/default/objects/Claim/fields/RequestDate__c.field-meta.xml
<CustomField>
    <fullName>RequestDate__c</fullName>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>