force-app/main/default/objects/Claim/fields/RequestedBy_lk__c.field-meta.xml
<CustomField>
    <fullName>RequestedBy_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>