force-app/main/default/objects/Claim/fields/SharingRole__c.field-meta.xml
<CustomField>
    <fullName>SharingRole__c</fullName>
    <label>Sharing Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>