force-app/main/default/objects/Claim/fields/SOCExpAmt__c.field-meta.xml
<CustomField>
    <fullName>SOCExpAmt__c</fullName>
    <description>Parent Claim에 연결된 Closed 된 SOC의 Expense Amount 집계</description>
    <label>SOC Expense Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>