force-app/main/default/objects/Claim/fields/SOCLossAmt__c.field-meta.xml
<CustomField>
    <fullName>SOCLossAmt__c</fullName>
    <description>Parent Claim에 연결된 Closed 된 SOC의 Loss Amount 집계</description>
    <label>SOC Loss Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>