force-app/main/default/objects/Claim/fields/SOCPLASeq__c.field-meta.xml
<CustomField>
    <fullName>SOCPLASeq__c</fullName>
    <label>SOC Seq</label>
    <length>255</length>
    <type>Text</type>
</CustomField>