force-app/main/default/objects/Claim/fields/SOCTotalAmt_fm__c.field-meta.xml
<CustomField>
    <fullName>SOCTotalAmt_fm__c</fullName>
    <description>Parent Claim에 연결된 Closed 된 SOC의 Total Amount 집계</description>
    <formula>SOCLossAmt__c +  SOCExpAmt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SOC Amount (Accumulated)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>