force-app/main/default/objects/Claim/fields/TotalAmt__c.field-meta.xml
<CustomField>
    <fullName>TotalAmt__c</fullName>
    <label>Total Amount (100%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>