force-app/main/default/objects/Claim/fields/TotalAmtLK__c.field-meta.xml
<CustomField>
    <fullName>TotalAmtLK__c</fullName>
    <description>문서 기준으로 계산값과 다른 금액을 사용해야하는 경우 기재</description>
    <inlineHelpText>Enter a value only if the document amount differs from the auto-calculated total. This value will override the calculated amount and be used as the Total amount(for LK Share).</inlineHelpText>
    <label>Total Amount (for LK Share) EDIT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>