force-app/main/default/objects/Claim/fields/TotalAmtLK_fm__c.field-meta.xml
<CustomField>
    <fullName>TotalAmtLK_fm__c</fullName>
    <description>자동 계산값을 우선하되, 문서 기준으로 계산값과 다른 금액을 사용해야하는 경우, 담당자 입력용 필드(TotalAmtLK__c)를 우선함.</description>
    <formula>IF(ISBLANK(TotalAmtLK__c), TotalAmt_fm__c * LKShare__c, TotalAmtLK__c)</formula>
    <label>Total Amount (for LK Share)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>