force-app/main/default/objects/Claim/fields/TotalRsv__c.field-meta.xml
<CustomField>
    <fullName>TotalRsv__c</fullName>
    <label>Total Amount Reserve (100%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>