force-app/main/default/objects/Claim/fields/TotalRsv_fm__c.field-meta.xml
<CustomField>
    <fullName>TotalRsv_fm__c</fullName>
    <formula>LossRsvRem__c  +  ExpRsvRem__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Amount Reserve (100%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>