force-app/main/default/objects/Claim/fields/TotalRsvLK_fm__c.field-meta.xml
<CustomField>
    <fullName>TotalRsvLK_fm__c</fullName>
    <description>자동 계산값을 우선하되, 문서 기준으로 계산값과 다른 금액을 사용해야하는 경우, 담당자 입력용 필드(TotalRsvLK__c)를 우선시함.</description>
    <formula>IF(ISBLANK(TotalRsvLK__c), TotalRsv_fm__c * LKShare__c, TotalRsvLK__c)</formula>
    <label>Total Amount Reserve (for LK share)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>