force-app/main/default/objects/Claim/fields/X_LossDate__c.field-meta.xml
<CustomField>
    <fullName>X_LossDate__c</fullName>
    <label>(X)Date of Loss</label>
    <type>Date</type>
</CustomField>