force-app/main/default/objects/Claim/fields/X_LossLocationAdd__c.field-meta.xml
<CustomField>
    <fullName>X_LossLocationAdd__c</fullName>
    <label>(X)Location of Loss_Address</label>
    <type>Address</type>
</CustomField>