force-app/main/default/objects/Claim/fields/X_Mappingtext__c.field-meta.xml
<CustomField>
    <fullName>X_Mappingtext__c</fullName>
    <label>(X)Mapping text 임시</label>
    <length>255</length>
    <type>Text</type>
</CustomField>