force-app/main/default/objects/Claim/recordTypes/Reinsurance.recordType-meta.xml
<RecordType>
    <fullName>Reinsurance</fullName>
    <active>true</active>
    <description>재보험 클레임</description>
    <label>Reinsurance</label>
</RecordType>