force-app/main/default/objects/Claim/recordTypes/Retail.recordType-meta.xml
<RecordType>
    <fullName>Retail</fullName>
    <active>true</active>
    <description>원보험 클레임</description>
    <label>Retail</label>
</RecordType>