force-app/main/default/objects/Claim/validationRules/CLM_Allocated_to_Advised_Validation_SOC.validationRule-meta.xml
<ValidationRule>
    <fullName>CLM_Allocated_to_Advised_Validation_SOC</fullName>
    <active>true</active>
    <description>사용자가 Post 버튼이 아닌 임의로 Allocated 에서 Advised 로 Stage 변경을 하지 않도록 설정</description>
    <errorConditionFormula>AND(
				ISPICKVAL(ClaimDocType__c , &quot;SOC&quot;), 
    ISCHANGED(Stage__c),  
    ISPICKVAL(PRIORVALUE(Stage__c), &quot;Allocated&quot;),
    ISPICKVAL(Stage__c, &quot;Advised&quot;),
    NOT(ISPICKVAL(Status, &quot;Closed&quot;))
)</errorConditionFormula>
    <errorMessage>Please change the stage using the Post button.</errorMessage>
</ValidationRule>