force-app/main/default/objects/Claim/listViews/Retail_Claim.listView-meta.xml
<ListView>
    <fullName>Retail_Claim</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Status</columns>
    <columns>ApprovedAmount</columns>
    <columns>ClaimReasonType</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RecordType</field>
        <operation>equals</operation>
        <value>Claim.Retail</value>
    </filters>
    <label>Retail Claim</label>
</ListView>